# merida

./: README.md  pyproject.toml  requirements.txt  run.sh
merida/: main.py  request_type.py
tests/: test_merida.py
