[tool.poetry]
name = "merida"
version = "0.1.0"
description = ""
authors = ["Goutham Krishna K V <gauthamkrishna9991@live.com>"]

[tool.poetry.dependencies]
python = "^3.8"
msgpack = "^1.0.4"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
black = {version = "^22.10.0", allow-prereleases = true}
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
